--- a/app/globals.css
+++ b/app/globals.css
@@ -40,12 +40,16 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
   --color-primary: #2da884;
   --color-darkprimary: #32b38d;
   --color-secondarydark: #232a42;
-  --color-black-layer: rgba(0, 0, 0, 0.9);
-  --color-grayp: var(--color-gray-600);
+  --color-whited: #ffffff;
 
+  --color-black-layer: rgba(0, 0, 0, 0.9);
+
+  --color-grayp: var(--color-gray-600);
+  --color-grayd: var(--color-gray-200);
   --font-montserrat: "Montserrat", sans-serif;
   --font-exile: "Oswald", sans-serif;
   --font-mo: var(--font-montserrat);
